# mlprpject-template

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml
.cursor/rules/: ml-rules.mdc  my-custom-rule.mdc
src/ml-project/configs/: __init__.py
src/ml-project/configs/experiment/: exp_01.yaml
src/ml-project/utils/: config_utils.py
src/ropproject/: __init__.py
src/ropproject/models/: __init__.py
src/ropproject/pipline/: __init__.py
src/ropproject/utils/: __init__.py
tests/: __init__.py
